--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tree-shaking"
-version = "0.2.2"
+version = "0.2.3"
 description = "Python tree-shaking for dependencies to reduce the size of packaging."
 authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
 readme = "README.md"
@@ -14,13 +14,21 @@ homepage = "https://github.com/likianta/python-tree-shaking"
 [tool.poetry.dependencies]
 python = "^3.12"
 argsense = "^1.1.0"
-lk-utils = "^3.3.0"
+lk-utils = "^3.4.0"
+streamlit = { version = "^1.51.0", optional = true }
+streamlit-canary = { version = "^0.1.0", optional = true }
+
+[project.optional-dependencies]
+ui = ["streamlit", "streamlit-canary"]
 
 [tool.poetry.group.dev.dependencies]
 argsense = { version = "^1.1.0", source = "likianta" }
-lk-utils = { version = "^3.3.1a3", source = "likianta" }
+lk-utils = { version = "^3.4.2", source = "likianta" }
 # pyecharts = "^2.0.8"
 pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
+pyyaml = "^6.0.0"
+streamlit = "^1.51.0"
+streamlit-canary = { version = "^0.1.1a4", source = "likianta" }
 
 [[tool.poetry.source]]
 name = "tsinghua"
