--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tree-shaking"
-version = "0.2.3"
+version = "0.3.0a0"
 description = "Python tree-shaking for dependencies to reduce the size of packaging."
 authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
 readme = "README.md"
@@ -15,11 +15,14 @@ homepage = "https://github.com/likianta/python-tree-shaking"
 python = "^3.12"
 argsense = "^1.1.0"
 lk-utils = "^3.4.0"
+
+# -- options
+pyyaml = { version = "^6.0.0", optional = true }
 streamlit = { version = "^1.51.0", optional = true }
 streamlit-canary = { version = "^0.1.0", optional = true }
 
 [project.optional-dependencies]
-ui = ["streamlit", "streamlit-canary"]
+ui = ["pyyaml", "streamlit", "streamlit-canary"]
 
 [tool.poetry.group.dev.dependencies]
 argsense = { version = "^1.1.0", source = "likianta" }
@@ -29,6 +32,7 @@ pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
 pyyaml = "^6.0.0"
 streamlit = "^1.51.0"
 streamlit-canary = { version = "^0.1.1a4", source = "likianta" }
+wxpython = "^4.2.4"
 
 [[tool.poetry.source]]
 name = "tsinghua"
